fluiddec: don't leak incoming caps event

https://bugzilla.gnome.org/show_bug.cgi?id=738291